--- a/functions/index.html
+++ b/functions/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <div class="input-group mb-3">
+    <div class="input-group mb-3" id="inpt">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">input</span>
         </div>
