--- a/functions/index.html
+++ b/functions/index.html
@@ -21,7 +21,10 @@
     </div>
     
     <button id="btn" onclick="greet()">Greetings!</button>
-    <script src="functions.js"></script>
+    <!--
+    <script src="funs.js"></script>
+    -->
+    <script src="funs2.js"></script>
     <!-- bootstrap 4-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
